// Autogenerated with StateSmith 0.22.2+0c32be37bf4d4fee5499780a5ef37a7996c192f9.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

namespace FinancialTracker.StateMachines;

// Generated state machine
public partial class FinancesViewModelStateMachine
{
    public enum EventId
    {
        POPULATEREQUEST = 0,
        POPULATESUCCESS = 1,
        SAVEREQUEST = 2,
        SAVESUCCESS = 3,
    }

    public const int EventIdCount = 4;

    public enum StateId
    {
        ROOT = 0,
        IDLE = 1,
        POPULATING = 2,
        SAVING = 3,
    }

    public const int StateIdCount = 4;

    // Subtree meta data generation can be disabled in settings.
    // Details: https://github.com/StateSmith/StateSmith/issues/538
    public const int ROOT_SubtreeEndId = 3;  // State 'FinancesViewModelStateMachine' subtree extends from itself (id: 0) to state 'Saving' (id: 3)
    public const int IDLE_SubtreeEndId = 1;  // State 'Idle' subtree extends from itself (id: 1) to state 'Idle' (id: 1)
    public const int POPULATING_SubtreeEndId = 2;  // State 'Populating' subtree extends from itself (id: 2) to state 'Populating' (id: 2)
    public const int SAVING_SubtreeEndId = 3;  // State 'Saving' subtree extends from itself (id: 3) to state 'Saving' (id: 3)

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public FinancesViewModelStateMachine()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(Idle)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `Idle`.
                IDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {
        switch (this.stateId)
        {
            // STATE: FinancesViewModelStateMachine
            case StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break;

            // STATE: Idle
            case StateId.IDLE:
                switch (eventId)
                {
                    case EventId.SAVEREQUEST: IDLE_saverequest(); break;
                    case EventId.POPULATEREQUEST: IDLE_populaterequest(); break;
                }
                break;

            // STATE: Populating
            case StateId.POPULATING:
                switch (eventId)
                {
                    case EventId.POPULATESUCCESS: POPULATING_populatesuccess(); break;
                }
                break;

            // STATE: Saving
            case StateId.SAVING:
                switch (eventId)
                {
                    case EventId.SAVESUCCESS: SAVING_savesuccess(); break;
                }
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.IDLE: IDLE_exit(); break;

                case StateId.POPULATING: POPULATING_exit(); break;

                case StateId.SAVING: SAVING_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state IDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void IDLE_enter()
    {
        this.stateId = StateId.IDLE;
    }

    private void IDLE_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void IDLE_populaterequest()
    {
        // Idle behavior
        // uml: PopulateRequest TransitionTo(Populating)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            IDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Populating`.
            POPULATING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Idle

        // No ancestor handles this event.
    }

    private void IDLE_saverequest()
    {
        // Idle behavior
        // uml: SaveRequest TransitionTo(Saving)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            IDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Saving`.
            SAVING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Idle

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state POPULATING
    ////////////////////////////////////////////////////////////////////////////////

    private void POPULATING_enter()
    {
        this.stateId = StateId.POPULATING;

        // Populating behavior
        // uml: enter / { OnPopulatingEnter(); }
        {
            // Step 1: execute action `OnPopulatingEnter();`
            OnPopulatingEnter();
        } // end of behavior for Populating

        // Populating behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Populating
    }

    private void POPULATING_exit()
    {
        // Populating behavior
        // uml: exit / { OnPopulatingExit(); }
        {
            // Step 1: execute action `OnPopulatingExit();`
            OnPopulatingExit();
        } // end of behavior for Populating

        // Populating behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Populating

        this.stateId = StateId.ROOT;
    }

    private void POPULATING_populatesuccess()
    {
        // Populating behavior
        // uml: PopulateSuccess TransitionTo(Idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            POPULATING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Idle`.
            IDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Populating

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state SAVING
    ////////////////////////////////////////////////////////////////////////////////

    private void SAVING_enter()
    {
        this.stateId = StateId.SAVING;

        // Saving behavior
        // uml: enter / { OnSavingEnter(); }
        {
            // Step 1: execute action `OnSavingEnter();`
            OnSavingEnter();
        } // end of behavior for Saving

        // Saving behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Saving
    }

    private void SAVING_exit()
    {
        // Saving behavior
        // uml: exit / { OnSavingExit(); }
        {
            // Step 1: execute action `OnSavingExit();`
            OnSavingExit();
        } // end of behavior for Saving

        // Saving behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Saving

        this.stateId = StateId.ROOT;
    }

    private void SAVING_savesuccess()
    {
        // Saving behavior
        // uml: SaveSuccess TransitionTo(Populating)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            SAVING_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Populating`.
            POPULATING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Saving

        // No ancestor handles this event.
    }

    // Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.IDLE: return "IDLE";
            case StateId.POPULATING: return "POPULATING";
            case StateId.SAVING: return "SAVING";
            default: return "?";
        }
    }

    // Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.POPULATEREQUEST: return "POPULATEREQUEST";
            case EventId.POPULATESUCCESS: return "POPULATESUCCESS";
            case EventId.SAVEREQUEST: return "SAVEREQUEST";
            case EventId.SAVESUCCESS: return "SAVESUCCESS";
            default: return "?";
        }
    }

    // Returns the parent state for a given state. Returns ROOT if input has no parent.
    // Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
    public static StateId GetParentId(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return StateId.ROOT;
            case StateId.IDLE: return StateId.ROOT;
            case StateId.POPULATING: return StateId.ROOT;
            case StateId.SAVING: return StateId.ROOT;
            default: return StateId.ROOT;
        }
    }
}
