@startuml FinancesViewModelStateMachine
state Idle
state Saving {
    Saving: enter / 
    Saving: exit / 
}
state Populating {
    Populating: enter / 
    Populating: exit / 
}

[*] -> Idle

Idle --> Saving: SaveRequest
Idle --> Populating: PopulateRequest

Saving -> Populating: SaveSuccess

Populating -> Idle: PopulateSuccess

@enduml